--- a/Comic-Collector/Comic-Collector.csproj
+++ b/Comic-Collector/Comic-Collector.csproj
@@ -18,10 +18,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="ViewModels\" />
-    <Folder Include="Views\" />
     <Folder Include="Behaviors\" />
     <Folder Include="Converters\" />
     <Folder Include="Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Views\AddComicPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
